force-app/main/default/objects/Payroll_Export__c/Payroll_Export__c.object-meta.xml
<CustomObject>
    <description>Represents a payroll export batch containing commission payments ready for payroll processing.</description>
    <label>Payroll Export</label>
    <nameField>
        <displayFormat>PE-{00000}</displayFormat>
        <label>Payroll Export Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payroll Exports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>