force-app/main/default/objects/Payroll_Export__c/fields/Approved_On__c.field-meta.xml
<CustomField>
    <fullName>Approved_On__c</fullName>
    <label>Approved On</label>
    <type>DateTime</type>
</CustomField>