force-app/main/default/objects/Payroll_Export__c/fields/Column_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Column_Mapping__c</fullName>
    <label>Column Mapping</label>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>