force-app/main/default/objects/Payroll_Export__c/fields/Export_Date__c.field-meta.xml
<CustomField>
    <fullName>Export_Date__c</fullName>
    <label>Export Date</label>
    <type>Date</type>
</CustomField>