force-app/main/default/objects/Payroll_Export__c/fields/Export_Format__c.field-meta.xml
<CustomField>
    <fullName>Export_Format__c</fullName>
    <label>Export Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>CSV</fullName><default>false</default><label>CSV</label></value>
            <value><fullName>Excel</fullName><default>false</default><label>Excel</label></value>
            <value><fullName>JSON</fullName><default>false</default><label>JSON</label></value>
            <value><fullName>ADP_Format</fullName><default>false</default><label>ADP Format</label></value>
            <value><fullName>Workday_Format</fullName><default>false</default><label>Workday Format</label></value>
            <value><fullName>Custom</fullName><default>false</default><label>Custom</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>