force-app/main/default/objects/Payroll_Export__c/fields/Exported_On__c.field-meta.xml
<CustomField>
    <fullName>Exported_On__c</fullName>
    <label>Exported On</label>
    <type>DateTime</type>
</CustomField>