force-app/main/default/objects/Payroll_Export__c/fields/File_URL__c.field-meta.xml
<CustomField>
    <fullName>File_URL__c</fullName>
    <description>Link to generated file</description>
    <label>File URL</label>
    <type>LongTextArea</type>
    <length>500</length>
</CustomField>