force-app/main/default/objects/Payroll_Export__c/fields/Record_Count__c.field-meta.xml
<CustomField>
    <fullName>Record_Count__c</fullName>
    <label>Record Count</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>