force-app/main/default/objects/Payroll_Export__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Draft</fullName><default>false</default><label>Draft</label></value>
            <value><fullName>Approved</fullName><default>false</default><label>Approved</label></value>
            <value><fullName>Exported</fullName><default>false</default><label>Exported</label></value>
            <value><fullName>Sent_To_Payroll</fullName><default>false</default><label>Sent To Payroll</label></value>
            <value><fullName>Confirmed_Paid</fullName><default>false</default><label>Confirmed Paid</label></value>
            <value><fullName>Partially_Confirmed</fullName><default>false</default><label>Partially Confirmed</label></value>
            <value><fullName>Error</fullName><default>false</default><label>Error</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>